Fix image spacing

--- a/_sass/_iridakos.scss
+++ b/_sass/_iridakos.scss
@@ -63,6 +63,7 @@ img.image {
   img {
     max-width: 100%;
     max-height: 800px;
+    margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
